# smart_house

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build_and_run.sh
src/: Context.cpp  Context.h  Model.cpp  Model.h  ReadMe.txt  SmartHouseKernel.cpp  stdafx.h
src/Commands/: CmdClose.cpp  CmdClose.h  CmdCreate.cpp  CmdCreate.h  CmdDelete.cpp  CmdDelete.h  CmdDemo.cpp  CmdDemo.h  CmdExit.cpp  CmdExit.h  CmdHelp.cpp  CmdHelp.h  CmdList.cpp  CmdList.h  CmdLoad.cpp  CmdLoad.h  CmdMusic.cpp  CmdMusic.h  CmdMusicPosition.cpp  CmdMusicPosition.h  CmdOpen.cpp  CmdOpen.h  CmdStore.cpp  CmdStore.h  CmdSwitchOff.cpp  CmdSwitchOff.h  CmdSwitchOn.cpp  CmdSwitchOn.h  CmdVolume.cpp  CmdVolume.h  _Command.h  _CommandHolder.cpp
src/SmartObjects/: DoorObject.cpp  DoorObject.h  LampObject.cpp  LampObject.h  RoomObject.cpp  RoomObject.h  _BaseObject.h  _ObjectFactory.cpp  _ObjectFactory.h
src/Storage/: BinLoader.cpp  TxtLoader.cpp  TxtLoader.h
src/Utils/: Colors.h  ConsoleManip.cpp  ConsoleManip.h  MusicContext.cpp  MusicContext.h  StringEx.cpp  StringEx.h  open_wav  test.cpp
src/libSDL/libs_x86/: !warning.txt
